--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,7 +11,17 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #3 - Use the same list display from search.html -->
-
+    <div th:if="${jobs} and ${jobs.size()} ?: 'nothin'">
+        <h3 th:text="${jobs.size()}+' job(s) found bebe'"></h3>
+        <div>
+            <table th:each="job : ${jobs}" class="job-listing">
+                <tr th:each="element, idx : ${job}" th:class="${idx.odd} ? 'odd'">
+                    <td th:text="${element.key}"></td>
+                    <td th:text="${element.value}"></td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </div>
 
 </body>
